fix: im suck dicks

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         <img src="rs_school_js.svg" alt=""
                             height="100" width="100">
                         <div class="logo">
-                            Anna Lavrushina
+                            zalupka Lavrushina
                         </div>
                     </div>
                 
