--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ h4{
 }
 
 body {
+    margin: auto 0;
     font-family: 'Montserrat', sans-serif;
     margin: 0px;
     background-color: #fdfdfd;
