--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                     <nav>
                          <h2> My code examples. You can click on image and go to the tasks:</h2>
                         <ul>
-                           <li> <a href="https://www.codewars.com/kata/56b5dd1702a30326ce000b02"> <img src="2.png" alt="" </li> </a> 
-                           <li> <a href="https://www.codewars.com/kata/5a34da5dee1aae516d00004a">  <img src="4.png" alt=""  </li> </a>
+                           <li> <a href="https://www.codewars.com/kata/56b5dd1702a30326ce000b02"> <img src="2.png" alt="" > </li> </a> 
+                           <li> <a href="https://www.codewars.com/kata/5a34da5dee1aae516d00004a">  <img src="4.png" alt="" > </li> </a>
                         </ul>
                      </nav>
                     </section>  
@@ -120,7 +120,7 @@ h4{
 }
 
 body {
-    margin: auto 0;
+    margin: auto ;
     font-family: 'Montserrat', sans-serif;
     margin: 0px;
     background-color: #fdfdfd;
